[package]
name = "await"
version = "0.0.0"
authors = ["Ignacio Corderi <icorderi@msn.com>"]
description = "Core primitives for building asynchrnonous stuff"
documentation = "http://icorderi.github.io/rust-await/index.html"
homepage = "https://github.com/icorderi/rust-await"
keywords = ["await", "async", "asynchrnonous"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/icorderi/rust-await"

[dependencies]
